--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,25 +1,19 @@
 <div class="container">
     <form [formGroup]="login" (ngSubmit)="logindata(login)" class="form-box">
-        <h3>Login</h3>
-        <div class="form-group">
-            <label>User Name</label>
-            <input type="text" formControlName="username" class="form-control mb-3 mt-3" placeholder="Enter Email"/>
-        </div>
-
-        <div class="form-group">
-            <label>Password</label>
-            <input type="password" formControlName="password" class="form-control mb-3 mt-3" placeholder="Enter Password"/>
-        </div>
-        <div class="createaccount">
-            <p>Don't have an account ?</p>
-            <a class="button"
-                routerLink="/register"
-                routerLinkActive="activebutton"
-                ariaCurrentWhenActive="page">
-                Create a new account
-            </a>   
-        </div>     
-     <br/>
-        <button type="submit" class="btn btn-success">Login</button>
+      <h3 class="form-title">Login</h3>
+      <div class="form-group left-align">
+        <label for="username">Username</label>
+        <input type="text" id="username" formControlName="username" class="form-control" />
+      </div>
+  
+      <div class="form-group left-align">
+        <label for="password">Password</label>
+        <input type="password" id="password" formControlName="password" class="form-control"  />
+      </div>
+      <div class="create-account">
+        <p class="account-text">Don't have an account? <a class="button no-blue" routerLink="/register" routerLinkActive="activebutton" ariaCurrentWhenActive="page">Create a new account</a></p>
+      </div>
+      <button type="submit" class="btn btn-success">Login</button>
     </form>
-</div>
+  </div>
+  
