--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,17 +1,17 @@
 <div class="container">
     <form [formGroup]="login" (ngSubmit)="logindata(login)" class="form-box">
-      <h3 class="form-title">Login</h3>
+      <h3 class="form-title">Connexion</h3>
       <div class="form-group left-align">
-        <label for="username">Username</label>
+        <label for="username">Identifiant</label>
         <input type="text" id="username" formControlName="username" class="form-control" />
       </div>
   
       <div class="form-group left-align">
-        <label for="password">Password</label>
+        <label for="password">Mot de passe</label>
         <input type="password" id="password" formControlName="password" class="form-control"  />
       </div>
       <div class="create-account">
-        <p class="account-text">Don't have an account? <a class="button no-blue" routerLink="/register" routerLinkActive="activebutton" ariaCurrentWhenActive="page">Create a new account</a></p>
+        <p class="account-text">Vous n'avez pas de compte ? <a class="button no-blue" routerLink="/register" routerLinkActive="activebutton" ariaCurrentWhenActive="page">Je m'inscris !</a></p>
       </div>
       <button type="submit" class="btn btn-success">Login</button>
     </form>
