--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,27 +1,28 @@
 <div class="container">
     <form [formGroup]="signup" (ngSubmit)="signupdata(signup)" class="form-box1">
-        <h3>Sign Up </h3>
+        <h3>Créer un compte </h3>
         <div class="form-group">
-            <label>Username</label>
-            <input type="text" formControlName="username" class="form-control mb-3 mt-3" placeholder="Enter Username"/>
+            <label>Identifiant</label>
+            <input type="text" formControlName="username" class="form-control mb-3 mt-3"/>
         </div>
         <div class="form-group">
-            <label>Password</label>
-            <input type="password" formControlName="password" class="form-control mb-3 mt-3" placeholder="Enter Password"/>
+            <label>Mot de passe</label>
+            <input type="password" formControlName="password" class="form-control mb-3 mt-3"/>
         </div>
         <div class="form-group">
-            <label>Email</label>
-            <input type="email" formControlName="email" class="form-control mb-3 mt-3" placeholder="Enter Email"/>
+            <label>Adresse mail</label>
+            <input type="email" formControlName="email" class="form-control mb-3 mt-3" />
         </div>
 
-        <span>You Have Already Account ?</span>
+        <span>Vous avez déjà un compte ?</span>
         <a class="button"
             routerLink="/login"
             routerLinkActive="activebutton"
             ariaCurrentWhenActive="page">
-            Sign In
+            Je me connecte
         </a>         <br/>
-        <button type="submit" class="btn btn-success">register</button>
+        <br>
+        <button type="submit" class="btn btn-success">Je m'inscris</button>
 
     </form>
 </div>
