--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,2 +1,8 @@
-<h2>Page Not Found</h2>
-<p>We couldn't find that page! Not even with x-ray vision.</p>
+<div class="error-container">
+    <div class="error-content">
+      <h2>404 - Page Not Found</h2>
+      <p>Il semblerait qu'il n'y ai rien d'intéressant ici</p>
+      <a routerLink="/">Revenir en lieu sur</a>
+    </div>
+  </div>
+  
