--- a/src/app/list-course/list-course.component.html
+++ b/src/app/list-course/list-course.component.html
@@ -16,6 +16,7 @@
       <br />
       <button type="submit" class="btn btn-success">Ajouter une course</button>
     </form>
+    <h3>Nombre de courses : {{ courses.length }}</h3>
     <h3>Les différentes courses :</h3>
     <table class="course-table">
         <thead>
